--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             Join us as we traverse the globe, seeking out hidden gems and beloved eateries tucked away in the streets of vibrant cities and quaint towns. Whether it's savoring street food in Bangkok, indulging in tapas in Barcelona, or feasting on sushi in Tokyo, our expeditions promise unforgettable culinary adventures. But A Moveable Feast is more than just a dining club—it's a community bound by a passion for exploration and a dedication to discovering the world one bite at a time. So, whether you're a seasoned globetrotter or a budding food enthusiast, come join us on a journey where every meal is an opportunity for discovery and every encounter is a celebration of the diverse flavors that make our world so rich and fascinating.
           </p>
           <div class="text-center">
-            <a href="#" class="btn btn-lg btn-primary">Begin Feasting</a>
+            <a href="#" class="btn btn-lg">Begin Feasting</a>
           </div>
         </div>
       </div>
