added images for the next div which explains how the service works.

--- a/index.html
+++ b/index.html
@@ -51,6 +51,41 @@
       </div>
     </div>
   </main>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-6">
+        <!-- Text on the left -->
+        <h2>First Image</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi.</p>
+      </div>
+      <div class="col-md-6">
+        <!-- Image on the right -->
+        <img src="assets/css/images/cherry.jpg" alt="Image 1" width="100%" class="image">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6 order-md-2">
+        <!-- Image on the right -->
+        <img src="assets/css/images/lolipop.jpg" width="100%" alt="Image 2" class="image">
+      </div>
+      <div class="col-md-6 order-md-1">
+        <!-- Text on the left -->
+        <h2>Second Image</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi.</p>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-6">
+        <!-- Text on the left -->
+        <h2>Third Image</h2>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus ante dapibus diam. Sed nisi.</p>
+      </div>
+      <div class="col-md-6">
+        <!-- Image on the right -->
+        <img src="assets/css/images/drink.jpg" width="100%" alt="Image 3" class="image">
+      </div>
+    </div>
+  </div>
 
   <footer class="bg-dark text-white text-center py-3">
     <div class="container">
